--- a/MotoActions/res/values/strings.xml
+++ b/MotoActions/res/values/strings.xml
@@ -120,4 +120,6 @@
     <string name="ambient_display_summary">Wake screen when you receive notifications</string>
     <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
     <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
+
+    <string name="tile_refresh_rate">Screen refresh rate</string>
 </resources>
